--- a/prebuild/Dockerfile
+++ b/prebuild/Dockerfile
@@ -1,4 +1,4 @@
-FROM jupyter/datascience-notebook:da2c5a4d00fa
+FROM jupyter/minimal-notebook:da2c5a4d00fa
 
 MAINTAINER Izaak Beekman <izaak@izaakbeekman.com>
 
@@ -89,7 +89,7 @@ RUN DEBIAN_FRONTEND=noninteractive transientBuildDeps="cmake git" \
     && jupyter nbextension install https://rawgithub.com/minrk/ipython_extensions/master/nbextensions/gist.js \
     && jupyter nbextension enable gist \
     && jupyter nbextension install --user https://rawgithub.com/minrk/ipython_extensions/master/nbextensions/toc.js \
-    && curl -L https://rawgithub.com/minrk/ipython_extensions/master/nbextensions/toc.css > $(jupyter --data-dir)/nbextensions/toc.css \
+    && wget -qO- https://rawgithub.com/minrk/ipython_extensions/master/nbextensions/toc.css > $(jupyter --data-dir)/nbextensions/toc.css \
     && jupyter nbextension enable toc \
     && rm -rf jupyter-caf-kernel \
     && apt-get clean \
